# gaussian-splatting-shader

./: .gitignore
SIBR_viewers/: .gitignore
SIBR_viewers/src/projects/gaussianviewer/apps/gaussianViewer/: CMakeLists.txt
SIBR_viewers/src/projects/gaussianviewer/renderer/: CMakeLists.txt  GaussianView.cpp  GaussianView.hpp
